Implement basic page format

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,13 @@
    <header>
       <h1>To-Do</h1>
    </header>
-   <main></main>
+   <main>
+      <nav>
+         <h2>Projects</h2>
+         <nav>
+            <div>Loading projects...</div>
+         </nav>
+      </nav>
+   </main>
 </body>
 </html>
