--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,7 @@
             <div>Loading projects...</div>
          </nav>
       </nav>
+      <div class="tasks"></div>
    </main>
 </body>
 </html>
