Change .tasks to ul

--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
             <div>Loading projects...</div>
          </nav>
       </nav>
-      <div class="tasks"></div>
+      <ul class="tasks">Loading tasks...</ul>
    </main>
 </body>
 </html>
