--- a/src/template.html
+++ b/src/template.html
@@ -12,9 +12,7 @@
    <main>
       <nav>
          <h2>Projects</h2>
-         <nav>
-            <div>Loading projects...</div>
-         </nav>
+         <ul>Loading projects...</ul>
       </nav>
       <ul class="tasks">Loading tasks...</ul>
    </main>
