--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,10 @@
    </header>
    <main>
       <nav>
-         <h2>Projects</h2>
+         <header>
+            <h2>Projects</h2>
+            <button>+</button>
+         </header>
          <ul>Loading projects...</ul>
       </nav>
       <ul class="tasks">Loading tasks...</ul>
