--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
       <nav>
          <header>
             <h2>Projects</h2>
-            <button>+</button>
+            <button class="circle">+</button>
          </header>
          <ul>Loading projects...</ul>
       </nav>
