Remove unnecessary text

--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
          </header>
          <ul>Loading projects...</ul>
       </nav>
-      <ul class="tasks">Loading tasks...</ul>
+      <ul class="tasks"></ul>
    </main>
 </body>
 </html>
